Prevent hi-res site logos from breaking out of container.

--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -426,6 +426,12 @@ nav {
     @include padding-trailer(.5);
 }
 
+#site-title img {
+    max-width: 100%;
+    height: auto;
+    vertical-align: top;
+}
+
 #search-container {
     padding: 0 16px rhythm();
 
